Updated Projects Section

--- a/index.html
+++ b/index.html
@@ -440,14 +440,15 @@
         <h3>Spam Email Classifier</h3>
         <p>Classifies emails as Spam or Ham using TF-IDF + Logistic Regression with high accuracy.</p>
       </div>
-      <div class="project-card" onclick="window.open('https://github.com/yourgithub/student-marks-predictor')">
+      <div class="project-card" onclick="window.open('https://github.com/vijayshahiiident-marks-predictor')">
         <h3>Student Marks Predictor</h3>
         <p>Predicts student marks based on study hours using linear regression analysis.</p>
       </div>
-      <div class="project-card" onclick="window.open('https://github.com/yourgithub/house-price-ml')">
-        <h3>House Price Prediction</h3>
-        <p>Predicts house prices using area, rooms, and location with machine learning models.</p>
-      </div>
+     <div class="project-card" onclick="window.open('https://github.com/vijayshahiii/diabetes-prediction-model')">
+  <h3>Diabetes Prediction</h3>
+  <p>Predicts whether a person is likely to have diabetes using medical features and ML classification algorithms.</p>
+</div>
+
     </div>
   </section>
 
